--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
+    "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.378.0",
     "react": "^18.2.0",
@@ -33,7 +34,8 @@
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.11",
