--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.7",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.11",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0"
@@ -45,6 +47,7 @@
     "@types/node": "^20.12.11",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-modal": "^3.16.3",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
