--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.15.18",
     "@radix-ui/react-slot": "^1.0.2",
@@ -31,9 +32,11 @@
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.378.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.7",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-infinite-scroll-component": "^6.1.0",
@@ -53,6 +56,7 @@
     "@types/node": "^20.12.11",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-modal": "^3.16.3",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
