--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.10.0",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "formik": "^2.4.6",
@@ -36,6 +38,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.7",
+    "react-emoji-picker": "^1.0.13",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
