Completed the first phase of video call

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ VITE_BACKEND_URL = "http://localhost:5000/"
 
 
 VITE_RAZORPAY_KEY_ID = "rzp_test_RRdtrmEm8YKVJp"
+
+VITE_GOOGLE_KEY = "877314682536-nf44nbj12qjgv9kcd4ffcne077lrcq8s.apps.googleusercontent.com"
