--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.8",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -32,10 +33,14 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "formik": "^2.4.6",
+    "global": "^4.4.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.378.0",
     "moment": "^2.30.1",
+    "peerjs": "^1.5.4",
+    "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.7",
     "react-emoji-picker": "^1.0.13",
@@ -51,19 +56,23 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "webcrypto-shim": "^0.1.7",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
     "@types/react": "^18.2.66",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.2.22",
     "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-modal": "^3.16.3",
+    "@types/simple-peer": "^9.11.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -71,9 +80,11 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "node-polyfill-webpack-plugin": "^4.0.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
