--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.18",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.2.1",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.3",
     "@tailwindcss/forms": "^0.5.7",
