Completed admin dashboard

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "peerjs": "^1.5.4",
     "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.7",
