--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 VITE_RECAPTCHE_KEY ="6LfXDPcpAAAAAOgxudPR-rlF1KvP_LYRPuzlt1Z4"
 VITE_SOME_KEY=123
-VITE_BACKEND_URL = "http://localhost:5000/"
+# VITE_BACKEND_URL = "http://localhost:5000/"
+VITE_BACKEND_URL ="https://api.shareblitz.fun/"
 
 
 VITE_RAZORPAY_KEY_ID = "rzp_test_RRdtrmEm8YKVJp"
