--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.18",
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.2.1",
     "@react-oauth/google": "^0.12.1",
