Completed video call using zegocloud

--- a/.env
+++ b/.env
@@ -7,3 +7,18 @@ VITE_BACKEND_URL ="https://api.shareblitz.fun/"
 VITE_RAZORPAY_KEY_ID = "rzp_test_RRdtrmEm8YKVJp"
 
 VITE_GOOGLE_KEY = "877314682536-nf44nbj12qjgv9kcd4ffcne077lrcq8s.apps.googleusercontent.com"
+
+VITE_ZEGOCLOUD_SECRET_KEY = '6e33cc2a03f44060dc15bb1210237ee1'
+VITE_ZEGOCLOUD_APP_ID = 162473906
+
+
+
+# firebase 
+VITE_APP_API_KEY=your-api-key
+VITE_APP_AUTH_DOMAIN=your-auth-domain
+VITE_APP_PROJECT_ID=shareblitz-693a5
+VITE_APP_STORAGE_BUCKET=your-storage-bucket
+VITE_APP_MESSAGING_SENDER_ID=652318165634
+VITE_APP_APP_ID=your-app-id
+VITE_APP_MEASUREMENT_ID=your-measurement-id
+VITE_APP_VAPID_KEY="KpfwUhsiA0e9MlnbAoaOKj-n-wP9L1KNILMAL3cDNuQ"
