--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -25,14 +27,18 @@
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.3",
     "@tailwindcss/forms": "^0.5.7",
+    "@zegocloud/zego-uikit-prebuilt": "^1.11.0",
+    "assert": "^2.1.0",
     "axios": "^1.6.8",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "crypto-browserify": "^3.12.0",
     "date-fns": "^3.6.0",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.10.0",
+    "firebase": "^10.12.3",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "formik": "^2.4.6",
@@ -40,6 +46,8 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.378.0",
     "moment": "^2.30.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "peerjs": "^1.5.4",
     "process": "^0.11.10",
     "react": "^18.2.0",
@@ -60,11 +68,15 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.5",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "url": "^0.11.3",
+    "vertx": "^0.0.1-security",
     "webcrypto-shim": "^0.1.7",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
@@ -79,7 +91,7 @@
     "@types/simple-peer": "^9.11.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
