Completed push notification

--- a/.env
+++ b/.env
@@ -14,11 +14,11 @@ VITE_ZEGOCLOUD_APP_ID = 162473906
 
 
 # firebase 
-VITE_APP_API_KEY=your-api-key
-VITE_APP_AUTH_DOMAIN=your-auth-domain
-VITE_APP_PROJECT_ID=shareblitz-693a5
-VITE_APP_STORAGE_BUCKET=your-storage-bucket
+VITE_APP_API_KEY="AIzaSyAXmS3E7LTG90-S9R6NApe9e0maW5FzpYc"
+VITE_APP_AUTH_DOMAIN="shareblitz-693a5.firebaseapp.com"
+VITE_APP_PROJECT_ID="shareblitz-693a5"
+VITE_APP_STORAGE_BUCKET="shareblitz-693a5.appspot.com"
 VITE_APP_MESSAGING_SENDER_ID=652318165634
-VITE_APP_APP_ID=your-app-id
-VITE_APP_MEASUREMENT_ID=your-measurement-id
+VITE_APP_APP_ID=1:652318165634:web:e0807e5ebd29049d29029b
+VITE_APP_MEASUREMENT_ID=G-07NXND3EVK
 VITE_APP_VAPID_KEY="KpfwUhsiA0e9MlnbAoaOKj-n-wP9L1KNILMAL3cDNuQ"
