--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "path-browserify": "^1.0.1",
     "peerjs": "^1.5.4",
     "process": "^0.11.10",
+    "push.js": "^1.0.12",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "^5.1.0",
