--- a/.env
+++ b/.env
@@ -1,24 +1,24 @@
-VITE_RECAPTCHE_KEY ="6LfXDPcpAAAAAOgxudPR-rlF1KvP_LYRPuzlt1Z4"
-VITE_SOME_KEY=123
-# VITE_BACKEND_URL = "http://localhost:5000/"
-VITE_BACKEND_URL ="https://api.shareblitz.fun/"
+VITE_RECAPTCHE_KEY =""
+VITE_SOME_KEY=
+# VITE_BACKEND_URL = ""
+VITE_BACKEND_URL =""
 
 
-VITE_RAZORPAY_KEY_ID = "rzp_test_RRdtrmEm8YKVJp"
+VITE_RAZORPAY_KEY_ID = ""
 
-VITE_GOOGLE_KEY = "877314682536-nf44nbj12qjgv9kcd4ffcne077lrcq8s.apps.googleusercontent.com"
+VITE_GOOGLE_KEY = ""
 
-VITE_ZEGOCLOUD_SECRET_KEY = '6e33cc2a03f44060dc15bb1210237ee1'
-VITE_ZEGOCLOUD_APP_ID = 162473906
+VITE_ZEGOCLOUD_SECRET_KEY = ''
+VITE_ZEGOCLOUD_APP_ID = 
 
 
 
 # firebase 
-VITE_APP_API_KEY="AIzaSyAXmS3E7LTG90-S9R6NApe9e0maW5FzpYc"
-VITE_APP_AUTH_DOMAIN="shareblitz-693a5.firebaseapp.com"
-VITE_APP_PROJECT_ID="shareblitz-693a5"
-VITE_APP_STORAGE_BUCKET="shareblitz-693a5.appspot.com"
-VITE_APP_MESSAGING_SENDER_ID=652318165634
-VITE_APP_APP_ID=1:652318165634:web:e0807e5ebd29049d29029b
-VITE_APP_MEASUREMENT_ID=G-07NXND3EVK
+VITE_APP_API_KEY=""
+VITE_APP_AUTH_DOMAIN=""
+VITE_APP_PROJECT_ID=""
+VITE_APP_STORAGE_BUCKET=""
+VITE_APP_MESSAGING_SENDER_ID=
+VITE_APP_APP_ID=1:
+VITE_APP_MEASUREMENT_ID=G-
 VITE_APP_VAPID_KEY="KpfwUhsiA0e9MlnbAoaOKj-n-wP9L1KNILMAL3cDNuQ"
